syntax = "proto3";
option go_package="theterriblechild/CloudApp/common";
package commontype;

message GetMessage{
    string id = 1;
}

message Search {
    repeated string id = 1;
    int32 start = 2;
    int32 limit = 3;
    string search = 4;
    repeated string sort = 5;
}

message String{
    string value = 1;
}

message Empty{}

message Token{
    string token = 1;
}